# analysis_SAM2

./: .gitignore  README.md  pyproject.toml
scripts/: point_tracking.ipynb  yolo_pose.ipynb
