[project]
name = "sam2-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core==1.3.2",
    "markupsafe>=3.0.2",
    "torch==2.5.1+cu121",
    "sam-2"
    "torchvision>=0.20.1",
]

[tool.uv.sources]
sam-2 = {git =  "https://github.com/facebookresearch/sam2",branch = "sam2_update/dev_20241211"}

[[tool.uv.index]]
name = 'pytorch'
url = 'https://download.pytorch.org/whl/cu121'
# default = true

