[project]
name = "sam2-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decord>=0.6.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.4",
    "ipython>=8.30.0",
    "ipywidgets==8.0.0",
    "jupyterlab>=4.3.3",
    "jupyterlab-widgets>=3.0.13",
    "matplotlib>=3.10.0",
    "notebook>=7.3.1",
    "pyqt6>=6.8.0",
    "tk>=0.1.0",
    "torch==2.5.1", #,+cu121",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.49",
    "opencv-python>=4.10.0.84",
]


# [[tool.uv.index]]
# name = 'pytorch'
# url = 'https://download.pytorch.org/whl/cu121'
# default = true

